--- a/src/form/p05-stock/form-lv1product/form05-product.component.html
+++ b/src/form/p05-stock/form-lv1product/form05-product.component.html
@@ -1,7 +1,7 @@
-<p>{{title}}</p> 1234
+<p>{{title}}</p>
 
 <div class="d-flex">  
-    <div class="col-6">     
+    <div class="col-12">     
         <div>
             <mat-form-field class="col-12" appearance="fill">
                 <mat-label>Id</mat-label>
@@ -9,14 +9,25 @@
             </mat-form-field>
         </div>
     </div>
+</div>
+<div class="d-flex">  
     <div class="col-6">    
         <div>
             <mat-form-field class="col-12" appearance="fill">
-                <mat-label>Category</mat-label>
-                <input [value]="currentCategory.categoryName"(change)="categoryNameChange($event)" matInput>
+                <mat-label>Product Name</mat-label>
+                <input [value]="currentCategory.categoryName"(change)="productNameChange($event)" matInput>
             </mat-form-field>
         </div>
     </div>
+    <div class="col-6">     
+        <div>
+            <mat-form-field class="col-12" appearance="fill">
+                <mat-label>Stock Threshold</mat-label>
+                <input [value]="currentCategory.id"(change)="IdChange($event)" matInput>
+            </mat-form-field>
+        </div>
+    </div>
+
 </div>
 <div class="d-flex">
     <div class="ml-4">
