[Set] product apis

--- a/src/form/p05-stock/form-lv1category/form05-category.component.html
+++ b/src/form/p05-stock/form-lv1category/form05-category.component.html
@@ -5,7 +5,7 @@
         <div>
             <mat-form-field class="col-12" appearance="fill">
                 <mat-label>Id</mat-label>
-                <input [value]="currentCategory.id"(change)="IdChange($event)" matInput>
+                <input [value]="currentCategory.id"(change)="IdChange($event)" matInput disabled>
             </mat-form-field>
         </div>
     </div>
