--- a/src/form/p03-purchase/form-lv2Supplierinvoice/form03-supplierinvoice.component.html
+++ b/src/form/p03-purchase/form-lv2Supplierinvoice/form03-supplierinvoice.component.html
@@ -162,7 +162,7 @@
                     <mat-label>Select Product</mat-label>
                     <mat-select [value]="currentSupplierInvoice.supplierId" (selectionChange)="productChange($event.value)">
                         <div *ngFor="let i of productDropDown">
-                            <mat-option [value]="i.productId">{{i.productId}}</mat-option>
+                            <mat-option [value]="i.id">{{getName(i.id, 'product')}}</mat-option>
                         </div>
                     </mat-select>
                 </mat-form-field>
