[Refactor] import acc filter and acc list as input

--- a/src/form/p07-transactions/form-lv7transactionList/form07-transactionList.component.html
+++ b/src/form/p07-transactions/form-lv7transactionList/form07-transactionList.component.html
@@ -1,5 +1,8 @@
 <p>Transactions</p>
 
+<div class="d-flex justify-content-center">
+    <app-draggable [accList]="accList" [accFilter]="accFilter"></app-draggable>
+</div>
 
 <div class="d-flex flex-row">
       <div><button style="width: 120px;" class="btn btn-primary" (click)="changePage('list')" >List</button></div>
