--- a/src/form/p07-transactions/form-lv7generalLedger/form07-generalLedger.component.html
+++ b/src/form/p07-transactions/form-lv7generalLedger/form07-generalLedger.component.html
@@ -1,6 +1,6 @@
 <p>General Ledger</p>
 <div class="d-flex justify-content-center">
-    <app-draggable-general-ledger></app-draggable-general-ledger>
+    <app-draggable-general-ledger [accList]="accList"></app-draggable-general-ledger>
 </div>
 
 <div class="d-flex flex-row">
