--- a/src/pages/p07-transactions/p07-transactions.component.html
+++ b/src/pages/p07-transactions/p07-transactions.component.html
@@ -1,5 +1,1 @@
-<div class="d-flex justify-content-center">
-    <app-draggable [accList]="accList" [accFilter]="accFilter"></app-draggable>
-</div>
-
-<router-outlet></router-outlet>
+<router-outlet (activate)="onLoad($event)"></router-outlet>
