--- a/src/components/draggable-general-ledger/draggable-general-ledger.component.css
+++ b/src/components/draggable-general-ledger/draggable-general-ledger.component.css
@@ -3,7 +3,7 @@
     height: 200px;
     border: solid 1px #ccc;
     color: rgba(0, 0, 0, 0.87);
-    cursor: move;
+    cursor: pointer;
     display: inline-flex;
     justify-content: center;
     text-align: center;
