--- a/src/form/p07-transactions/form-lv7generalLedger/form07-generalLedger.component.html
+++ b/src/form/p07-transactions/form-lv7generalLedger/form07-generalLedger.component.html
@@ -3,53 +3,22 @@
     <app-draggable-general-ledger [accList]="accList" (accEvent)="setAcc($event)"></app-draggable-general-ledger>
 </div>
 
-<div class="d-flex flex-row">
-  
-    <div class="col-12">
-        <!-- <table mat-table [dataSource]="dataSourceT" class="mat-elevation-z8 col-12">          
-            <ng-container matColumnDef="transaction_date">
-            <th mat-header-cell *matHeaderCellDef> Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.transaction_date | dateFormatPipe}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="accountControlCode">
-            <th mat-header-cell *matHeaderCellDef> Account </th>
-            <td mat-cell *matCellDef="let element"> {{element.accountControlCode}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="invoiceNo">
-            <th mat-header-cell *matHeaderCellDef> Invoice No </th>
-            <td mat-cell *matCellDef="let element"> {{element.invoiceNo}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="transaction_title">
-            <th mat-header-cell *matHeaderCellDef> Transaction Title </th>
-            <td mat-cell *matCellDef="let element"> {{element.transaction_title}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="description">
-            <th mat-header-cell *matHeaderCellDef> Description </th>
-            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="debit">
-            <th mat-header-cell *matHeaderCellDef> Debit </th>
-            <td mat-cell *matCellDef="let element"> {{element.debit  }} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="credit">
-            <th mat-header-cell *matHeaderCellDef> Credit </th>
-            <td mat-cell *matCellDef="let element"> {{element.credit  }} </td>
-            </ng-container>
-
-
-        
-            <tr mat-header-row class="text-center" *matHeaderRowDef="displayedColumnsT"></tr>
-            <tr (click)="clickCurrentInvoice(row.id,row)" id="{{row.id}}" ngClass mat-row *matRowDef="let row; columns: displayedColumnsT;"
-                style="{{
-                    setTransactionStyle(row)
-                }}"
-            ></tr>
-        </table> -->
-    </div>
+<div class="d-flex justify-content-center">
+    <div class="example-boundary">
+        <div *ngFor="let j of tableLedger" class="example-box">
+          <div class="d-flex flex-column row col-12">
+            <div>
+                <h2>
+                    {{ j.accountcontrolname }} {{j.controlcode}}
+                </h2>
+            </div>
+            <div>
+                <div class="col-6" *ngFor="let i of j.debit">{{i.date | dateFormatPipe}} {{ i.value }}</div>
+                <div class="col-6" *ngFor="let i of j.credit">{{i.date | dateFormatPipe}} {{ i.value }}</div>
+            </div>
+                
+          </div>
+      
+        </div>
+      </div>
 </div>
