--- a/src/components/draggable-general-ledger/draggable-general-ledger.component.html
+++ b/src/components/draggable-general-ledger/draggable-general-ledger.component.html
@@ -4,7 +4,26 @@
       <h2>
         {{j.acc}}
       </h2>
+      <div *ngFor="let i of accFilter" class="row justify-content-center">
+          <div *ngIf="i.accountheadname === j.acc && i.debit !== i.credit" class="row w-100 col-12 d-flex justify-content-between">
+            <div>
+              {{ i.accountcontrolname }}
+            </div>
+            <div>
+              {{ i.controlcode }}
+            </div>
+          </div>
+          <div *ngIf="i.accountheadname === j.acc && i.debit !== i.credit" class="d-flex row col-12">
+            <div class="btn-primary col-6">
+              {{ i.debit - i.credit > 0 ?  i.debit - i.credit  : 0}}
+            </div>
+            <div class="btn-danger col-6">
+              {{ i.credit - i.debit > 0 ?  i.credit - i.debit  : 0}}
+            </div>          
+          </div>
 
+
+      </div>
     </div>
 
   </div>
