--- a/src/form/p05-stock/form-lv1stock/form05-stock.component.html
+++ b/src/form/p05-stock/form-lv1stock/form05-stock.component.html
@@ -53,7 +53,7 @@
              
             <mat-form-field appearance="fill">
                 <mat-label>Description</mat-label>
-                <textarea style="height: 150px;" [value]="currentProduct.description" (blur)="descriptionChange($event)" matInput></textarea>
+                <textarea style="height: 150px;" [value]="currentProduct.invoiceDetailId" (blur)="invoiceDetailIdChange($event)" matInput></textarea>
             </mat-form-field>       
         </div>
     </div>
