[Fix] clear product id

--- a/src/form/p01-sales/form-lv2CustomerInvoice/form01-customerinvoice.component.html
+++ b/src/form/p01-sales/form-lv2CustomerInvoice/form01-customerinvoice.component.html
@@ -160,7 +160,7 @@
             <div>
                 <mat-form-field class="col-4" appearance="fill">
                     <mat-label>Select Product</mat-label>
-                    <mat-select [value]="currentCustomerInvoice.customerId" (selectionChange)="productChange($event.value)">
+                    <mat-select [value]="currentCustomerInvoiceDetail.productId" (selectionChange)="productChange($event.value)">
                         <div *ngFor="let i of productDropDown">
                             <mat-option [value]="i.id">{{getName(i.id, 'product')}}</mat-option>
                         </div>
