--- a/src/form/p03-purchase/form-lv2Supplierinvoice/form03-supplierinvoice.component.html
+++ b/src/form/p03-purchase/form-lv2Supplierinvoice/form03-supplierinvoice.component.html
@@ -160,7 +160,7 @@
             <div>
                 <mat-form-field class="col-4" appearance="fill">
                     <mat-label>Select Product</mat-label>
-                    <mat-select [value]="currentSupplierInvoice.supplierId" (selectionChange)="productChange($event.value)">
+                    <mat-select [value]="currentSupplierInvoiceDetail.productId" (selectionChange)="productChange($event.value)">
                         <div *ngFor="let i of productDropDown">
                             <mat-option [value]="i.id">{{getName(i.id, 'product')}}</mat-option>
                         </div>
