[Fix] Chart not show

--- a/src/form/p05-stock/form-lv1lowstock/form05-low-stock.component.html
+++ b/src/form/p05-stock/form-lv1lowstock/form05-low-stock.component.html
@@ -1,11 +1,8 @@
+<button >Monthly</button>
 <div class="d-flex">   
   Low Stock Details
-  <button ></button>
-  <div *ngFor="let data of dataSource">
-    <canvas 
-      [id]="data.id"
-      attr.data = "data.data"
-    ></canvas>
+  <div>
+    <canvas  id="MyChart" >{{ chart }}</canvas>
   </div> 
 
 </div>
